Fixed overlapping by changing the menu position in the pinned top-row mode.

--- a/frontend/src/app/shared/components/participant-card/participant-card.component.sass
+++ b/frontend/src/app/shared/components/participant-card/participant-card.component.sass
@@ -74,7 +74,7 @@ video
 .current-user-actions,
 .other-participant-actions
     display: none
-    margin: 0
+    margin: 30px 0 0 0 !important
     background-color: rgba(#f4f4f9, 0.7)
     border-radius: 5px
     border: solid 1px rgba(grey, 0.5)
